--- a/devcontainer-feature.json
+++ b/devcontainer-feature.json
@@ -1,5 +1,5 @@
 {
-    "id": "nix",
+    "id": "nix-flake",
     "version": "1.2.0",
     "name": "Nix Package Manager",
     "documentationURL": "https://github.com/e346m/nix-flake/tree/main",
