--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,3 +19,5 @@ jobs:
           publish-features: "true"
           base-path-to-features: "./src"
           devcontainer-cli-version: "0.53.0"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
